--- a/audio-spectrum/Cargo.toml
+++ b/audio-spectrum/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "audio-test2"
+name = "audio-spectrum"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,4 @@ edition = "2021"
 nannou = "0.18"
 nannou_audio = "0.18"
 ringbuf = "0.2.2"
-rustfft = "6.1.0"
 spectrum-analyzer = "1.2.6"
